# ThoriumEngine

./: .gitignore  .gitmodules  Engine Startup.rtf  Project Structure.rtf  README.md  Resource Management.rtf  install_linux.sh  install_win64.bat  networking info.txt  todo.rtf
engine/: setup.bat
engine/editor_addons/: addons.cfg
projects/MgsDemo/: Launch (Local Engine).lnk  log.txt
src/: ThoriumEngine.sln  build.bat  build.sh  build_buildtool.sh  build_editor.bat  build_headertool.sh  build_release.bat  generate.bat  generate.sh  generate_editor.bat  generate_vs19.bat
src/BuildTool/: Build.cfg  BuildTool.vcxproj  BuildTool.vcxproj.filters  CMakeLists.txt
src/BuildTool/src/: Build.cpp  Build.h  main.cpp
src/BuildTool/x64/Debug/: BuildTool.exe.recipe  BuildTool.ilk  vc142.idb
src/HeaderTool/: Build.cfg  HeaderTool.vcxproj  HeaderTool.vcxproj.filters
src/Launcher/: Build.cfg  Launcher.vcxproj
src/LauncherDll/: Build.cfg  LauncherDll.vcxproj  LauncherDll.vcxproj.filters
src/MathLib/: MathLib.vcxproj  MathLib.vcxproj.filters
src/Scripts/: CopySources.py
src/Thorium Editor/: Thorium Editor.vcxproj  Thorium Editor.vcxproj.filters  imgui.ini  log.txt
src/Thorium Sdk/: Thorium Sdk.aps  Thorium Sdk.rc  Thorium Sdk.vcxproj  Thorium Sdk.vcxproj.filters  icons.qrc  resource.h
src/Thorium Sdk - Backup/: Thorium Sdk.vcxproj  Thorium Sdk.vcxproj.filters
src/ThoriumEditor/: Build.cfg
src/ThoriumEngine/: Build.cfg  NewRenderer_pseudo.cpp  ThoriumEngine.vcxproj  ThoriumEngine.vcxproj.filters
src/Util/: Build.cfg  CMakeLists.txt  Util.vcxproj  (+1 more)
(+747 files in other folders)
